examples/test/testpolicy413.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy413
  namespace: namespace25
spec:
  podSelector:
    matchLabels:
      key47: value12
      key24: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value19
          key38: value12
          key32: value20
      podSelector:
        matchLabels:
          key43: value21
          key21: value41
